<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sem_5"
    android:orientation="vertical"
    android:background="@drawable/gradient_1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/sem5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/semester_5"
                android:textColor="#ffff"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light">


            </TextView>

            <Button
                android:id="@+id/ai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/round_btn"
                android:text="@string/artificial_intelligence"
                android:textColor="#021371"
                android:textSize="18sp">

            </Button>

            <Button
                android:id="@+id/ej"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/enterprice_java"
                android:textColor="#021371"
                android:background="@drawable/round_btn"
                android:textSize="18sp">

            </Button>

            <Button
                android:id="@+id/awp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_btn"
                android:text="@string/advanced_web_programming"
                android:textColor="#021371"
                android:textSize="18sp" />

            <Button
                android:id="@+id/iot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/internet_of_things"
                android:textColor="#021371"
                android:textSize="18sp"
                android:background="@drawable/round_btn"/>

            <Button
                android:id="@+id/spm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
                android:background="@drawable/round_btn"
                android:text="@string/software_project_management"
                android:textColor="#021371"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>