<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sem_4"
    android:orientation="vertical"
    android:background="@drawable/gradient_1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/sem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/semester_4"
                android:textColor="#ffff"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light">


            </TextView>

            <Button
                android:id="@+id/cj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/round_btn"
                android:text="@string/core_java"
                android:textColor="#021371"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/software_engineering"
                android:textColor="#021371"
                android:background="@drawable/round_btn"
                android:textSize="18sp">

            </Button>

            <Button
                android:id="@+id/es"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_btn"
                android:text="@string/embedded_system"
                android:textColor="#021371"
                android:textSize="18sp">

            </Button>

            <Button
                android:id="@+id/stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/computer_oriented_statistical_techniques"
                android:textColor="#021371"
                android:background="@drawable/round_btn"
                android:textSize="18sp">

            </Button>
            <Button
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/computer_graphics_and_animation"
                android:textColor="#021371"
                android:background="@drawable/round_btn"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>