<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn_Activity"
    android:background="@drawable/gradient_1"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

                <TextView
                    android:id="@+id/login1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textStyle="bold"/>

            <EditText
                android:id="@+id/edittext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:paddingStart="20dp"
                android:paddingTop="10dp"

                android:paddingBottom="10dp"
                android:textColor="#ffff"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password1"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:drawableStart="@drawable/ic_security"
                android:background="@drawable/input_bg"
                android:textColor="#ffff"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"/>

            <Button
                android:id="@+id/btnsignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signin"
                android:layout_marginTop="20dp"

                android:background="@drawable/round_btn"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/textview11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:id="@+id/textview22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="@color/colorAccent"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:drawableStart="@drawable/ic_facebook"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/facebook"

                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnGoogle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:drawableStart="@drawable/ic_google"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/google"

                    android:textSize="18sp" />
            </LinearLayout>




        </LinearLayout>
    </ScrollView>


</LinearLayout>